1.增加几个相应的变量 2.增加根据una和ack来处理本地包的方法 3.更新本地una方法